# 5jars

./: .gitignore  5jars  CMakeLists.txt  README.md  local.properties  makefile  mobile.cpp  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/cobol/src/: test.cob
backend/cobol_microservice/: CMakeLists.txt
backend/cobol_microservice/src/: mysql_wrapper.c
backend/db/: db_config.json  schema.sql  testdata.sql
backend/flask/: app.py
backend/spring_api/: Dockerfile  build.gradle.kts  settings.gradle.kts
cobol/src/: cob_ffi_helpers.c  test.cob
etc/: showcase.webm
flutter_frontend/: pubspec.yaml
flutter_frontend/config/: dev.json  prod.json
flutter_frontend/lib/: api.dart  main.dart
flutter_frontend/lib/api_client/: api_client.dart  (+1 more)
flutter_frontend/web/: index.html  manifest.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
infrastructure/db/: README.md  compose.yaml
infrastructure/k8s/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/cobol_ffi/: cobol_bindings.dart  cobol_bridge.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
resources/: accounts.txt  log.txt  users.txt
source/: 5jars.c  5jars.cpp  Cont.cpp  Cont.h  account.cpp  account.h  cheltuieli.cpp  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  user.cpp  user.h
test/: widget_test.dart
windows/: CMakeLists.txt
(+142 files in other folders)
